--- a/web-src/package.json
+++ b/web-src/package.json
@@ -15,6 +15,7 @@
     "tinycolor2": "^1.4.2",
     "typeface-roboto": "^1.1.13",
     "vue": "^2.7.10",
+    "vue-cli": "^2.9.6",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
